<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardViewId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/test"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="@color/teal_700"
            android:layout_margin="10dp"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textSize="28sp" />

        <RadioGroup
            android:id="@+id/radioGroupQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>


            <RadioButton
                android:id="@+id/choice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/c1"/>

            <RadioButton
                android:id="@+id/choice2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/c2"/>

            <RadioButton
                android:id="@+id/choice3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/c3"/>

            <RadioButton
                android:id="@+id/choice4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/c4"/>


        </RadioGroup>


            <Button
                android:visibility="invisible"
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

