<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.SignIn">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:layout_gravity="center"
        android:textColor="@color/yellow"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <!--email text field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        android:textColorHint="@color/yellow"
        app:hintTextColor="@color/yellow"
        app:startIconTint="@color/yellow"
        app:boxStrokeColor="@color/yellow"
        app:startIconDrawable="@drawable/ic_email"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <!--password text field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        app:counterTextColor="@color/yellow"
        app:endIconTint="@color/yellow"
        android:textColorHint="@color/yellow"
        app:hintTextColor="@color/yellow"
        app:startIconTint="@color/yellow"
        app:boxStrokeColor="@color/yellow"
        app:startIconDrawable="@drawable/ic_lock">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow"
            android:maxLength="9">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>





        <!--login button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:backgroundTint="@color/yellow2"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp">

        </com.google.android.material.button.MaterialButton>



    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/yellow"
        android:text="@string/newAccount"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>