<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardViewId"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        

        <TextView
            android:id="@+id/nameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/section_name"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="@color/teal_700"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imageViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:src="@drawable/mental" />


       

        <Button
            android:id="@+id/btnMoreId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_details"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />





    <LinearLayout
        android:id="@+id/linearLayoutIdMental"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/effects"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvEffects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/effects"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Causes"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvCausesM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/Causes"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvTreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/treatment"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            />





    </LinearLayout>



        <LinearLayout
            android:id="@+id/linearLayoutIdBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Info"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Info"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diseases_afflicted"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvDiseasesAfflicted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/diseases_afflicted"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Causes"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvCausesB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Causes"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avoid"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvAvoid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/avoid"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>